2/19: Massive backport, file by file warning/error checking